dark mode and light mode working separately correctly

--- a/src/components/leftbar/leftBar.scss
+++ b/src/components/leftbar/leftBar.scss
@@ -1,9 +1,15 @@
+@import '../../style.scss';
+
 .leftBar {
+    @include themify($themes) {
+
     flex: 2;
     position: sticky;
     top: 50px;
     height: calc(100vh - 50px);
     overflow: scroll;
+    background-color: themed("bg");
+    color: themed("textColor");
 
     &::-webkit-scrollbar{
         display: none;
@@ -16,7 +22,7 @@
             margin: 18px 0;
             border: none;
             height: 0.5px;
-            background-color: lightgrey;
+            background-color: themed("border");
         }
         .menu {
             display: flex;
@@ -61,4 +67,6 @@
             }
         }
     }
+}
+
 }
