--- a/src/components/rightbar/rightBar.scss
+++ b/src/components/rightbar/rightBar.scss
@@ -1,9 +1,14 @@
+@import "../../style.scss";
+
 .rightBar {
+    @include themify($themes) {
+
     flex: 3;
     position: sticky;
     top: 50px;
     height: calc(100vh - 50px);
     overflow: scroll;
+    background-color: themed("bgSoft");
 
     &::-webkit-scrollbar{
         display: none;
@@ -13,6 +18,12 @@
         padding: 20px;
 
         .item {
+            box-shadow: 0px 3px 10px 1px rgba(51,51,51, 0.4);
+            -webkit-box-shadow: 0px 3px 10px 1px rgba(51,51,51, 0.4);
+            -moz-box-shadow: 0px 3px 10px 1px rgba(51,51,51, 0.4);
+            padding: 20px;
+            margin-bottom: 20px;
+            background-color: themed("bg");
 
             span {
                 color: gray;
@@ -22,10 +33,13 @@
                 display: flex;
                 align-items: center;
                 justify-content: space-between;
+                margin: 20px 0;
 
                 .userInfo {
                     display: flex;
                     align-items: center;
+                    gap: 20px;
+                    position: relative;
 
                     img {
                         width: 40px;
@@ -34,16 +48,56 @@
                         object-fit: cover;
                     }
 
+                    .online {
+                        width: 12px;
+                        height: 12px;
+                        border-radius: 50%;
+                        background-color: limegreen;
+                        position: absolute;
+                        top: 0;
+                        left: 30px;
+                    }
+
+                    p {
+                        color: themed("textColorSoft");
+
+                    }
+
+                    span {
+                        font-weight: 600;
+                        color: themed("textColor");
+                        margin-right: 15px;
+                    }
+
                 }
 
                 .buttons {
                     display: flex;
                     align-items: center;
+                    gap: 10px;
 
+                    button {
+
+                        border: none;
+                        padding: 5px;
+                        color: white;
+                        cursor: pointer;
+                        
+                        &:first-child {
+                            background-color: #5271ff;
+                        }
+
+                        &:last-child {
+                            background-color: #f0544f;
+                        }
+
+
+                        }
                 }
             }
         }
 
     }
 
+}
 }
